grammar/ForgeParser.ts
// Generated from grammar/Forge.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { ForgeListener } from "./ForgeListener";
import { ForgeVisitor } from "./ForgeVisitor";


export class ForgeParser extends Parser {
	public static readonly OPEN_TOK = 1;
	public static readonly LEFT_SQUARE_TOK = 2;
	public static readonly RIGHT_SQUARE_TOK = 3;
	public static readonly AS_TOK = 4;
	public static readonly FILE_PATH_TOK = 5;
	public static readonly VAR_TOK = 6;
	public static readonly ABSTRACT_TOK = 7;
	public static readonly SIG_TOK = 8;
	public static readonly LEFT_CURLY_TOK = 9;
	public static readonly RIGHT_CURLY_TOK = 10;
	public static readonly EXTENDS_TOK = 11;
	public static readonly IN_TOK = 12;
	public static readonly PLUS_TOK = 13;
	public static readonly LONE_TOK = 14;
	public static readonly SOME_TOK = 15;
	public static readonly ONE_TOK = 16;
	public static readonly TWO_TOK = 17;
	public static readonly SET_TOK = 18;
	public static readonly FUNC_TOK = 19;
	public static readonly PFUNC_TOK = 20;
	public static readonly DISJ_TOK = 21;
	public static readonly COLON_TOK = 22;
	public static readonly WHEAT_TOK = 23;
	public static readonly PRED_TOK = 24;
	public static readonly DOT_TOK = 25;
	public static readonly FUN_TOK = 26;
	public static readonly LEFT_PAREN_TOK = 27;
	public static readonly RIGHT_PAREN_TOK = 28;
	public static readonly ASSERT_TOK = 29;
	public static readonly RUN_TOK = 30;
	public static readonly CHECK_TOK = 31;
	public static readonly FOR_TOK = 32;
	public static readonly BUT_TOK = 33;
	public static readonly EXACTLY_TOK = 34;
	public static readonly NONE_TOK = 35;
	public static readonly UNIV_TOK = 36;
	public static readonly IDEN_TOK = 37;
	public static readonly MINUS_TOK = 38;
	public static readonly IS_TOK = 39;
	public static readonly SAT_TOK = 40;
	public static readonly UNSAT_TOK = 41;
	public static readonly THEOREM_TOK = 42;
	public static readonly FORGE_ERROR_TOK = 43;
	public static readonly TEST_TOK = 44;
	public static readonly EXPECT_TOK = 45;
	public static readonly SUITE_TOK = 46;
	public static readonly BAR_TOK = 47;
	public static readonly ALL_TOK = 48;
	public static readonly SUFFICIENT_TOK = 49;
	public static readonly NECESSARY_TOK = 50;
	public static readonly LET_TOK = 51;
	public static readonly BIND_TOK = 52;
	public static readonly OR_TOK = 53;
	public static readonly XOR_TOK = 54;
	public static readonly IFF_TOK = 55;
	public static readonly IMP_TOK = 56;
	public static readonly ELSE_TOK = 57;
	public static readonly AND_TOK = 58;
	public static readonly UNTIL_TOK = 59;
	public static readonly RELEASE_TOK = 60;
	public static readonly SINCE_TOK = 61;
	public static readonly TRIGGERED_TOK = 62;
	public static readonly NEG_TOK = 63;
	public static readonly ALWAYS_TOK = 64;
	public static readonly EVENTUALLY_TOK = 65;
	public static readonly AFTER_TOK = 66;
	public static readonly BEFORE_TOK = 67;
	public static readonly ONCE_TOK = 68;
	public static readonly HISTORICALLY_TOK = 69;
	public static readonly CARD_TOK = 70;
	public static readonly PPLUS_TOK = 71;
	public static readonly AMP_TOK = 72;
	public static readonly SUBT_TOK = 73;
	public static readonly SUPT_TOK = 74;
	public static readonly PRIME_TOK = 75;
	public static readonly TILDE_TOK = 76;
	public static readonly EXP_TOK = 77;
	public static readonly STAR_TOK = 78;
	public static readonly AT_TOK = 79;
	public static readonly BACKQUOTE_TOK = 80;
	public static readonly THIS_TOK = 81;
	public static readonly SEXPR_TOK = 82;
	public static readonly INST_TOK = 83;
	public static readonly EVAL_TOK = 84;
	public static readonly EXAMPLE_TOK = 85;
	public static readonly ARROW_TOK = 86;
	public static readonly EQ_TOK = 87;
	public static readonly LT_TOK = 88;
	public static readonly GT_TOK = 89;
	public static readonly LEQ_TOK = 90;
	public static readonly GEQ_TOK = 91;
	public static readonly NI_TOK = 92;
	public static readonly NO_TOK = 93;
	public static readonly SUM_TOK = 94;
	public static readonly INT_TOK = 95;
	public static readonly OPTION_TOK = 96;
	public static readonly COMMA_TOK = 97;
	public static readonly SLASH_TOK = 98;
	public static readonly NUM_CONST_TOK = 99;
	public static readonly IDENTIFIER_TOK = 100;
	public static readonly WS = 101;
	public static readonly CCOMMENT = 102;
	public static readonly COMMENT = 103;
	public static readonly MULTCOMMENT = 104;
	public static readonly RULE_alloyModule = 0;
	public static readonly RULE_importDecl = 1;
	public static readonly RULE_paragraph = 2;
	public static readonly RULE_sigDecl = 3;
	public static readonly RULE_sigExt = 4;
	public static readonly RULE_mult = 5;
	public static readonly RULE_arrowMult = 6;
	public static readonly RULE_helperMult = 7;
	public static readonly RULE_paraDecl = 8;
	public static readonly RULE_quantDecl = 9;
	public static readonly RULE_arrowDecl = 10;
	public static readonly RULE_predType = 11;
	public static readonly RULE_predDecl = 12;
	public static readonly RULE_funDecl = 13;
	public static readonly RULE_paraDecls = 14;
	public static readonly RULE_assertDecl = 15;
	public static readonly RULE_cmdDecl = 16;
	public static readonly RULE_testDecl = 17;
	public static readonly RULE_testExpectDecl = 18;
	public static readonly RULE_testBlock = 19;
	public static readonly RULE_scope = 20;
	public static readonly RULE_typescope = 21;
	public static readonly RULE_const = 22;
	public static readonly RULE_satisfiabilityDecl = 23;
	public static readonly RULE_propertyDecl = 24;
	public static readonly RULE_quantifiedPropertyDecl = 25;
	public static readonly RULE_testSuiteDecl = 26;
	public static readonly RULE_testConstruct = 27;
	public static readonly RULE_arrowOp = 28;
	public static readonly RULE_compareOp = 29;
	public static readonly RULE_letDecl = 30;
	public static readonly RULE_block = 31;
	public static readonly RULE_blockOrBar = 32;
	public static readonly RULE_quant = 33;
	public static readonly RULE_qualName = 34;
	public static readonly RULE_optionDecl = 35;
	public static readonly RULE_name = 36;
	public static readonly RULE_nameList = 37;
	public static readonly RULE_qualNameList = 38;
	public static readonly RULE_paraDeclList = 39;
	public static readonly RULE_quantDeclList = 40;
	public static readonly RULE_arrowDeclList = 41;
	public static readonly RULE_letDeclList = 42;
	public static readonly RULE_typescopeList = 43;
	public static readonly RULE_exprList = 44;
	public static readonly RULE_expr = 45;
	public static readonly RULE_expr1 = 46;
	public static readonly RULE_expr1_5 = 47;
	public static readonly RULE_expr2 = 48;
	public static readonly RULE_expr3 = 49;
	public static readonly RULE_expr4 = 50;
	public static readonly RULE_expr4_5 = 51;
	public static readonly RULE_expr5 = 52;
	public static readonly RULE_expr6 = 53;
	public static readonly RULE_expr7 = 54;
	public static readonly RULE_expr8 = 55;
	public static readonly RULE_expr9 = 56;
	public static readonly RULE_expr10 = 57;
	public static readonly RULE_expr11 = 58;
	public static readonly RULE_expr12 = 59;
	public static readonly RULE_expr13 = 60;
	public static readonly RULE_expr14 = 61;
	public static readonly RULE_expr15 = 62;
	public static readonly RULE_expr16 = 63;
	public static readonly RULE_expr17 = 64;
	public static readonly RULE_expr18 = 65;
	public static readonly RULE_arrowExpr = 66;
	public static readonly RULE_sexprDecl = 67;
	public static readonly RULE_sexpr = 68;
	public static readonly RULE_instDecl = 69;
	public static readonly RULE_evalRelDecl = 70;
	public static readonly RULE_evalDecl = 71;
	public static readonly RULE_exampleDecl = 72;
	public static readonly RULE_queryDecl = 73;
	public static readonly RULE_numberList = 74;
	public static readonly RULE_number = 75;
	public static readonly RULE_bounds = 76;
	public static readonly RULE_atomNameOrNumber = 77;
	public static readonly RULE_bound = 78;
	public static readonly RULE_boundLHS = 79;
	public static readonly RULE_bindRHSUnion = 80;
	public static readonly RULE_bindRHSProduct = 81;
	public static readonly RULE_bindRHSProductBase = 82;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"alloyModule", "importDecl", "paragraph", "sigDecl", "sigExt", "mult", 
		"arrowMult", "helperMult", "paraDecl", "quantDecl", "arrowDecl", "predType", 
		"predDecl", "funDecl", "paraDecls", "assertDecl", "cmdDecl", "testDecl", 
		"testExpectDecl", "testBlock", "scope", "typescope", "const", "satisfiabilityDecl", 
		"propertyDecl", "quantifiedPropertyDecl", "testSuiteDecl", "testConstruct", 
		"arrowOp", "compareOp", "letDecl", "block", "blockOrBar", "quant", "qualName", 
		"optionDecl", "name", "nameList", "qualNameList", "paraDeclList", "quantDeclList", 
		"arrowDeclList", "letDeclList", "typescopeList", "exprList", "expr", "expr1", 
		"expr1_5", "expr2", "expr3", "expr4", "expr4_5", "expr5", "expr6", "expr7", 
		"expr8", "expr9", "expr10", "expr11", "expr12", "expr13", "expr14", "expr15", 
		"expr16", "expr17", "expr18", "arrowExpr", "sexprDecl", "sexpr", "instDecl", 
		"evalRelDecl", "evalDecl", "exampleDecl", "queryDecl", "numberList", "number", 
		"bounds", "atomNameOrNumber", "bound", "boundLHS", "bindRHSUnion", "bindRHSProduct", 
		"bindRHSProductBase",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'open'", "'['", "']'", "'as'", "'filepath'", "'var'", "'abstract'", 
		"'sig'", "'{'", "'}'", "'extends'", "'in'", "'+'", "'lone'", "'some'", 
		"'one'", "'two'", "'set'", "'func'", "'pfunc'", "'disj'", "':'", "'wheat'", 
		"'pred'", "'.'", "'fun'", "'('", "')'", "'assert'", "'run'", "'check'", 
		"'for'", "'but'", "'exactly'", "'none'", "'univ'", "'iden'", "'-'", "'is'", 
		"'sat'", "'unsat'", "'theorem'", "'forge_error'", "'test'", "'expect'", 
		"'suite'", "'|'", "'all'", "'sufficient'", "'necessary'", "'let'", "'bind'", 
		"'or'", "'xor'", "'iff'", "'imp'", "'else'", "'and'", "'until'", "'release'", 
		"'since'", "'triggered'", "'neg'", "'always'", "'eventually'", "'after'", 
		"'before'", "'once'", "'historically'", "'#'", "'pplus'", "'amp'", "'subt'", 
		"'supt'", "'''", "'~'", "'exp'", "'*'", "'@'", "'`'", "'this'", "'sexpr'", 
		"'inst'", "'eval'", "'example'", "'->'", "'='", "'<'", "'>'", "'<='", 
		"'>='", "'ni'", "'no'", "'sum'", "'Int'", "'option'", "','", "'/'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "OPEN_TOK", "LEFT_SQUARE_TOK", "RIGHT_SQUARE_TOK", "AS_TOK", 
		"FILE_PATH_TOK", "VAR_TOK", "ABSTRACT_TOK", "SIG_TOK", "LEFT_CURLY_TOK", 
		"RIGHT_CURLY_TOK", "EXTENDS_TOK", "IN_TOK", "PLUS_TOK", "LONE_TOK", "SOME_TOK", 
		"ONE_TOK", "TWO_TOK", "SET_TOK", "FUNC_TOK", "PFUNC_TOK", "DISJ_TOK", 
		"COLON_TOK", "WHEAT_TOK", "PRED_TOK", "DOT_TOK", "FUN_TOK", "LEFT_PAREN_TOK", 
		"RIGHT_PAREN_TOK", "ASSERT_TOK", "RUN_TOK", "CHECK_TOK", "FOR_TOK", "BUT_TOK", 
		"EXACTLY_TOK", "NONE_TOK", "UNIV_TOK", "IDEN_TOK", "MINUS_TOK", "IS_TOK", 
		"SAT_TOK", "UNSAT_TOK", "THEOREM_TOK", "FORGE_ERROR_TOK", "TEST_TOK", 
		"EXPECT_TOK", "SUITE_TOK", "BAR_TOK", "ALL_TOK", "SUFFICIENT_TOK", "NECESSARY_TOK", 
		"LET_TOK", "BIND_TOK", "OR_TOK", "XOR_TOK", "IFF_TOK", "IMP_TOK", "ELSE_TOK", 
		"AND_TOK", "UNTIL_TOK", "RELEASE_TOK", "SINCE_TOK", "TRIGGERED_TOK", "NEG_TOK", 
		"ALWAYS_TOK", "EVENTUALLY_TOK", "AFTER_TOK", "BEFORE_TOK", "ONCE_TOK", 
		"HISTORICALLY_TOK", "CARD_TOK", "PPLUS_TOK", "AMP_TOK", "SUBT_TOK", "SUPT_TOK", 
		"PRIME_TOK", "TILDE_TOK", "EXP_TOK", "STAR_TOK", "AT_TOK", "BACKQUOTE_TOK", 
		"THIS_TOK", "SEXPR_TOK", "INST_TOK", "EVAL_TOK", "EXAMPLE_TOK", "ARROW_TOK", 
		"EQ_TOK", "LT_TOK", "GT_TOK", "LEQ_TOK", "GEQ_TOK", "NI_TOK", "NO_TOK", 
		"SUM_TOK", "INT_TOK", "OPTION_TOK", "COMMA_TOK", "SLASH_TOK", "NUM_CONST_TOK", 
		"IDENTIFIER_TOK", "WS", "CCOMMENT", "COMMENT", "MULTCOMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(ForgeParser._LITERAL_NAMES, ForgeParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return ForgeParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Forge.g4"; }

	// @Override
	public get ruleNames(): string[] { return ForgeParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return ForgeParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(ForgeParser._ATN, this);
	}
	// @RuleVersion(0)
	public alloyModule(): AlloyModuleContext {
		let _localctx: AlloyModuleContext = new AlloyModuleContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, ForgeParser.RULE_alloyModule);
		let _la: number;
		try {
			this.state = 184;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 3, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 169;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === ForgeParser.OPEN_TOK) {
					{
					{
					this.state = 166;
					this.importDecl();
					}
					}
					this.state = 171;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 175;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ForgeParser.VAR_TOK) | (1 << ForgeParser.ABSTRACT_TOK) | (1 << ForgeParser.SIG_TOK) | (1 << ForgeParser.LONE_TOK) | (1 << ForgeParser.SOME_TOK) | (1 << ForgeParser.ONE_TOK) | (1 << ForgeParser.TWO_TOK) | (1 << ForgeParser.PRED_TOK) | (1 << ForgeParser.FUN_TOK) | (1 << ForgeParser.ASSERT_TOK) | (1 << ForgeParser.RUN_TOK) | (1 << ForgeParser.CHECK_TOK))) !== 0) || _la === ForgeParser.TEST_TOK || _la === ForgeParser.EXPECT_TOK || ((((_la - 82)) & ~0x1F) === 0 && ((1 << (_la - 82)) & ((1 << (ForgeParser.SEXPR_TOK - 82)) | (1 << (ForgeParser.INST_TOK - 82)) | (1 << (ForgeParser.EXAMPLE_TOK - 82)) | (1 << (ForgeParser.OPTION_TOK - 82)) | (1 << (ForgeParser.IDENTIFIER_TOK - 82)))) !== 0)) {
					{
					{
					this.state = 172;
					this.paragraph();
					}
					}
					this.state = 177;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 181;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === ForgeParser.EVAL_TOK) {
					{
					{
					this.state = 178;
					this.evalDecl();
					}
					}
					this.state = 183;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public importDecl(): ImportDeclContext {
		let _localctx: ImportDeclContext = new ImportDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, ForgeParser.RULE_importDecl);
		let _la: number;
		try {
			this.state = 204;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 7, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 186;
				this.match(ForgeParser.OPEN_TOK);
				this.state = 187;
				this.qualName();
				this.state = 192;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === ForgeParser.LEFT_SQUARE_TOK) {
					{
					this.state = 188;
					this.match(ForgeParser.LEFT_SQUARE_TOK);
					this.state = 189;
					this.qualNameList();
					this.state = 190;
					this.match(ForgeParser.RIGHT_SQUARE_TOK);
					}
				}

				this.state = 196;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === ForgeParser.AS_TOK) {
					{
					this.state = 194;
					this.match(ForgeParser.AS_TOK);
					this.state = 195;
					this.name();
					}
				}

				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 198;
				this.match(ForgeParser.OPEN_TOK);
				this.state = 199;
				this.match(ForgeParser.FILE_PATH_TOK);
				this.state = 202;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === ForgeParser.AS_TOK) {
					{
					this.state = 200;
					this.match(ForgeParser.AS_TOK);
					this.state = 201;
					this.name();
					}
				}

				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public paragraph(): ParagraphContext {
		let _localctx: ParagraphContext = new ParagraphContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, ForgeParser.RULE_paragraph);
		try {
			this.state = 222;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 8, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 206;
				this.sigDecl();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 207;
				this.predDecl();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 208;
				this.funDecl();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 209;
				this.assertDecl();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 210;
				this.cmdDecl();
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 211;
				this.testExpectDecl();
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 212;
				this.sexprDecl();
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 213;
				this.queryDecl();
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 214;
				this.evalRelDecl();
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 215;
				this.optionDecl();
				}
				break;

			case 11:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 216;
				this.instDecl();
				}
				break;

			case 12:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 217;
				this.exampleDecl();
				}
				break;

			case 13:
				this.enterOuterAlt(_localctx, 13);
				{
				this.state = 218;
				this.propertyDecl();
				}
				break;

			case 14:
				this.enterOuterAlt(_localctx, 14);
				{
				this.state = 219;
				this.quantifiedPropertyDecl();
				}
				break;

			case 15:
				this.enterOuterAlt(_localctx, 15);
				{
				this.state = 220;
				this.satisfiabilityDecl();
				}
				break;

			case 16:
				this.enterOuterAlt(_localctx, 16);
				{
				this.state = 221;
				this.testSuiteDecl();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public sigDecl(): SigDeclContext {
		let _localctx: SigDeclContext = new SigDeclContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, ForgeParser.RULE_sigDecl);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 225;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === ForgeParser.VAR_TOK) {
				{
				this.state = 224;
				this.match(ForgeParser.VAR_TOK);
				}
			}

			this.state = 228;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === ForgeParser.ABSTRACT_TOK) {
				{
				this.state = 227;
				this.match(ForgeParser.ABSTRACT_TOK);
				}
			}

			this.state = 231;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << ForgeParser.LONE_TOK) | (1 << ForgeParser.SOME_TOK) | (1 << ForgeParser.ONE_TOK) | (1 << ForgeParser.TWO_TOK))) !== 0)) {
				{
				this.state = 230;
				this.mult();
				}
			}

			this.state = 233;
			this.match(ForgeParser.SIG_TOK);
			this.state = 234;
			this.nameList();
			this.state = 236;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === ForgeParser.EXTENDS_TOK || _la === ForgeParser.IN_TOK) {
				{
				this.state = 235;
				this.sigExt();
				}
			}
